--- a/dbc_underflow/app/views/questions/index.html.erb
+++ b/dbc_underflow/app/views/questions/index.html.erb
@@ -1,6 +1,24 @@
+<nav class="top-bar" data-topbar role="navigation">
+  <ul class="title-area">
+    <li class="name">
+      <h1> <%= link_to "DBC Underflow", questions_path %> </h1>
+    </li>
+     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+  </ul>
+
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <ul class="right">
+      <li class="active"><%= link_to 'Ask Question', new_question_path %></li>
+    </ul>
+
+  </section>
+</nav>
+
 <div class="row">
-  <div class="large-12 columns">
-    <h1>DBC Underflow</h1>
+  <div class="large-12 columns text-center">
+    <h2>Questions</h2>
   </div>
 </div>
 
@@ -11,5 +29,4 @@
     <% end %>
   </div>
 </div>
-
 
