--- a/dbc_underflow/app/assets/stylesheets/application.css
+++ b/dbc_underflow/app/assets/stylesheets/application.css
@@ -16,3 +16,19 @@
 
  */
  /*= require foundation */
+
+#question-vote {
+  text-align: center;
+  padding: 50px 0;
+  background-color: #07c;
+  font-size: 30px;
+ }
+
+
+#answer-vote {
+  text-align: center;
+  padding: 6px 0;
+  margin: 0 5px;
+  background-color: gray;
+  font-size: 13.5px;
+ }
