--- a/dbc_underflow/app/views/answers/edit.html.erb
+++ b/dbc_underflow/app/views/answers/edit.html.erb
@@ -4,37 +4,15 @@
   </div>
 </div>
 
+<%= render 'form' %>
+
 <div class="row">
   <div class="large-12 columns">
-    <div class="form-answer">
-      <%= form_for :answer, url: question_answer_path, method: :put do |f| %>
-        <% if @answer.errors.any? %>
-      <div id="error_explanation">
-        <h4><%= pluralize(@answer.errors.count, "error") %> prohibited
-          this answer from being saved:</h4>
-          <ul>
-            <% @answer.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-            <% end %>
-          </ul>
-        </div>
-        <% end %>
 
-        <p>
-          <%= f.label :content %><br>
-          <%= f.text_area :content %>
-        </p>
-
-        <p>
-          <%= f.submit "Submit Answer", :class => "[small] button" %>
-        </p>
-        <% end %>
-
-      </div>
-
-    </div>
+    <%= link_to 'Delete', [@answer.question, @answer],
+                            method: :delete, data: { confirm: 'Fosho?' }, :class => "[small] button" %>
   </div>
-
+</div>
 
 <div class="row">
   <div class="large-12 columns">
