--- a/dbc_underflow/app/views/questions/index.html.erb
+++ b/dbc_underflow/app/views/questions/index.html.erb
@@ -3,7 +3,7 @@
     <li class="name">
       <h1> <%= link_to "DBC Underflow", questions_path %> </h1>
     </li>
-     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
 
@@ -25,7 +25,11 @@
 <div class="row">
   <div class="large-12 columns">
     <% @questions.each do |question| %>
-    <h3><%= link_to "#{question.title}", question_path(question) %></h3>
+    <div class="panel">
+      <h3><%= link_to "#{question.title}", question_path(question) %></h3>
+      <p><%= question.votes %> votes
+         <%= question.answers.count %> answers</p>
+    </div>
     <% end %>
   </div>
 </div>
