github api implemented

--- a/dbc_underflow/app/views/questions/index.html.erb
+++ b/dbc_underflow/app/views/questions/index.html.erb
@@ -16,9 +16,28 @@
   </section>
 </nav>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="row">
   <div class="large-12 columns text-center">
     <h2>Questions</h2>
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-12 columns text-center panel" id="api-quote">
+    <h4><%= ApplicationHelper::get_quote %></h4>
   </div>
 </div>
 
