--- a/dbc_underflow/app/views/questions/index.html.erb
+++ b/dbc_underflow/app/views/questions/index.html.erb
@@ -10,9 +10,8 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li class="active"><%= link_to 'Ask Question', new_question_path %></li>
+      <li class="active" id="ask-question"><%= link_to 'Ask Question', new_question_path %></li>
     </ul>
-
   </section>
 </nav>
 
