--- a/dbc_underflow/app/views/questions/create.js.erb
+++ b/dbc_underflow/app/views/questions/create.js.erb
@@ -1,1 +1,1 @@
-$("<%= escape_javascript(render @question %>").appendTo("#question-collection");
+$("<%= escape_javascript(render @question) %>").appendTo('#question-collection');
